--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "colors-app",
+  "homepage": "https://aslanfam.github.io/ColorPalette",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +9,7 @@
     "@material-ui/styles": "^3.0.0-alpha.10",
     "chroma-js": "^2.0.3",
     "emoji-mart": "^2.10.0",
+    "gh-pages": "^3.2.3",
     "rc-slider": "^8.6.6",
     "react": "^16.8.4",
     "react-color": "^2.17.0",
@@ -21,6 +23,8 @@
     "react-transition-group": "^2.6.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
